<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_schedule"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#81EDEDED"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_dttm_show_start"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/tv_dttm_show_start" />

        <ImageView
            android:id="@+id/iv_small_image_portrait"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/iv_small_image_portrait"
            android:scaleType="centerCrop"
            android:transitionName="animation_transition"
            tools:srcCompat="@drawable/ic_cinema_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_vertical"
                android:text="@string/tv_title" />

            <TextView
                android:id="@+id/tv_theatre_and_auditorium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/tv_theatre_and_auditorium" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:text="@string/tv_rating" />

                <TextView
                    android:id="@+id/tv_spoken_language_iso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:text="@string/tv_spoken_language_iso" />

                <TextView
                    android:id="@+id/tv_presentation_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/tv_presentation_method" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>